website/versioned_docs/version-2.1.x/reference/goals/dependencies.mdx
---
title: dependencies
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants dependencies [args]
```

List the dependencies of the input files/targets.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[dependencies]`</span>

<span className={styles.options}>

## Basic options

### `output_file`

<Option
  cli_repr={`--dependencies-output-file=<path>`}
  env_repr="PANTS_DEPENDENCIES_OUTPUT_FILE"
  default_repr={`None`}
>

Output the goal&#x27;s stdout to this file. If unspecified, outputs to stdout.

</Option>

### `sep`

<Option
  cli_repr={`--dependencies-sep=<separator>`}
  env_repr="PANTS_DEPENDENCIES_SEP"
  default_repr={`\\n`}
>

String to use to separate lines in line-oriented output.

</Option>

### `transitive`

<Option
  cli_repr={`--[no-]dependencies-transitive`}
  env_repr="PANTS_DEPENDENCIES_TRANSITIVE"
  default_repr={`False`}
>

List all transitive dependencies. If unspecified, list direct dependencies
only.

</Option>

### `type`

<Option
  cli_repr={`--dependencies-type=<DependencyType>`}
  env_repr="PANTS_DEPENDENCIES_TYPE"
  one_of="source, 3rdparty, source-and-3rdparty"
  default_repr={`source`}
>

Which types of dependencies to list, where `source` means source code
dependencies and `3rdparty` means third-party requirement strings.

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

- [download-pex-bin](../subsystems/download-pex-bin.mdx)
- [grpc_python_plugin](../subsystems/grpc_python_plugin.mdx)
- [pex](../subsystems/pex.mdx)
- [protoc](../subsystems/protoc.mdx)
- [python-infer](../subsystems/python-infer.mdx)
- [python-native-code](../subsystems/python-native-code.mdx)
- [python-protobuf](../subsystems/python-protobuf.mdx)
- [python-repos](../subsystems/python-repos.mdx)
- [python-setup](../subsystems/python-setup.mdx)
- [source](../subsystems/source.mdx)
- [subprocess-environment](../subsystems/subprocess-environment.mdx)

</span>
